@@ -1,3 +1,13 @@
+Fri Mar  3 17:46:15 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/userlist-gui.c:
+	* src/fe-gnome/find-bar.c:
+	* src/fe-gnome/navigation-tree.c:
+	  - Set cursor position in the text entry after we grab focus, since
+	    GtkEntry likes to select the contents of the entry when grabbing.
+	    This makes it so existing text isn't selected after switching
+	    channels/using the find bar/looking at the userlist.
+
 Sat Mar  4 01:20:05 CET 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/main-window.c:
@@ -8,7 +18,6 @@ Sat Mar  4 01:20:05 CET 2006  Guillaume Desmottes <cass@skynet.be>
 	    so called too many times.
 	  - Rename label "on all servers" to "Apply on all server" to be
 	    clearer and more HIG compliant.
-	    
 
 Thu Mar  2 22:46:51 CET 2006  Christian Persch <chpe@gnome.org>
 
